# pureworld

./: .gitignore  README.md  cleantha.cabal
src/: FirstStep.hs  Main.hs  Taste.hs
src/hr/: README.md
src/hr/Recursion/: Fibonacci.hs  GCD.hs  PascalTriangle.hs  SierpinskiTriangles.hs  StringReduction.hs  hehe.hs
src/hr/introduction/: AreaVolumnOfCurve.hs  EvaluatingEX.hs  FilterArray.hs  FilterListPos.hs  ListOperations.hs  ListReplication.hs  NTimes.hs  SolveMeFirstFP.hs  SumOfOddElements.hs  UpdateList.hs  hehe.hs
test/: FirstStepSpec.hs  TasteSpec.hs
