name:              cleantha
version:           1.0
Build-Type:        Simple
Cabal-Version:     >= 1.10

executable cleantha
  Default-Language:     Haskell2010
  main-is:              Main.hs
  hs-source-dirs:       src
  build-depends:        base

Library
  Default-Language:     Haskell2010
  GHC-Options:          -Wall
  hs-source-dirs:       src
  Exposed-Modules:      Taste
  Build-Depends:        base >= 4 && < 5
                      , array

Test-Suite spec
  Type:                 exitcode-stdio-1.0
  Default-Language:     Haskell2010
  Hs-Source-Dirs:       test
  Ghc-Options:          -Wall
  Main-Is:              Spec.hs
  Other-Modules:        TasteSpec
  Build-Depends:        base
                      , hspec >= 1.3
                      , QuickCheck
                      , cleantha
